Updated database to postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
 version: '3.8'
 
 services:
-  # 1. Database Service
+  # 1. Database Service (PostgreSQL)
   db:
-    image: mysql:8.0
+    image: postgres:15
     container_name: ats_db_container
     restart: always
     environment:
-      MYSQL_DATABASE: ats
-      MYSQL_ROOT_PASSWORD: Vyom2004r
+      POSTGRES_DB: ats
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: Vyom2004r
     ports:
-      - "3307:3306"
+      - "5432:5432"
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data:/var/lib/postgresql/data
     # NEW: Healthcheck ensures DB is ready before Backend starts
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-pVyom2004r"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -37,9 +38,9 @@ services:
     environment:
       - DB_HOST=db
       - DB_NAME=ats
-      - DB_USER=root
+      - DB_USER=postgres
       - DB_PASSWORD=Vyom2004r
-      - DB_PORT=3306
+      - DB_PORT=5432
 
   # 3. Frontend Service (React)
   frontend:
