--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -30,7 +30,6 @@ MarkupSafe==3.0.3
 mdurl==0.1.2
 mpmath==1.3.0
 murmurhash==1.0.15
-mysqlclient==2.2.7
 networkx==3.4.2
 numpy==2.2.6
 packaging==25.0
@@ -72,3 +71,4 @@ urllib3==2.5.0
 wasabi==1.1.3
 weasel==0.4.3
 wrapt==2.0.1
+psycopg2-binary==2.9.9
